# yardstick

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apple/: Justfile  project.yml
apple/Daily/: CalendarCard.swift  ContentView.swift  Core.swift  DailyApp.swift  DayColumn.swift  EditGate.swift  NoteEditor.swift  QuickAddView.swift  SidebarView.swift  Theme.swift
apple/DailyTests/: EditGateTests.swift  ThemeTests.swift
docs/: SDLC.md
docs/design/handoff/: Core Journeys.dc.html  README.md  Todo Note App v2.dc.html  Todo Note App.dc.html
docs/design/reference/: core-journeys.md  v2-today-view.md
docs/research/: crux-architecture.md  mcp-rust-server.md  persistence-fts.md  swiftui-macos-ui.md
docs/superpowers/plans/: 2026-07-02-phase-0-walking-skeleton.md  2026-07-04-phase-1-shell-and-notes.md
docs/superpowers/specs/: 2026-07-02-daily-app-design.md
mcp/: Cargo.toml
mcp/src/: auth.rs  lib.rs  reader.rs  server.rs  test_support.rs
mcp/tests/: tools.rs
runtime/: Cargo.toml  boltffi.toml
runtime/src/: ffi.rs  lib.rs  mcp_glue.rs  router.rs  storage_handler.rs
runtime/tests/: ffi.rs  headless.rs  mcp_end_to_end.rs  notes_flow.rs
runtime/tests/common/: mod.rs
scripts/: guardrails.sh
scripts/hooks/: guard-git.sh
shared/: Cargo.toml
shared/src/: app.rs  civil.rs  lib.rs
shared/src/effects/: storage.rs
store/: Cargo.toml
store/migrations/: 001_initial.sql  002_notes.sql
store/src/: db.rs  executor.rs  lib.rs
