[workspace]
resolver = "3"
members = ["shared", "store", "mcp", "runtime"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
crux_core = "0.19"
facet = "=0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
rmcp = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
schemars = "1"
anyhow = "1"
