[package]
name = "mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
shared = { path = "../shared" }
store = { path = "../store" }
rusqlite = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
subtle = "2"

[features]
# Test-only rmcp client helpers, shared with `runtime`'s tests. Enabled
# exclusively via dev-dependencies (self-referential below, and in
# runtime's [dev-dependencies]) so production builds never compile it.
test-support = ["rmcp/client", "rmcp/transport-streamable-http-client-reqwest"]

[dev-dependencies]
mcp = { path = ".", features = ["test-support"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
reqwest = { version = "0.12", features = ["json"] }
