[package]
name = "shared"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
facet_typegen = ["crux_core/facet_typegen"]
codegen = ["facet_typegen", "dep:anyhow", "dep:clap"]

[dependencies]
crux_core = { workspace = true }
facet = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
crux_core = { workspace = true, features = ["testing"] }

[[bin]]
name = "codegen"
required-features = ["codegen"]
